--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
     <title>Hello</title>
 </head>
 <body>
+    <h1>This is my first web page</h1>
     <h1>Hello! This is my first Git file</h1>
 </body>
 </html>
