--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>This is my first web page</h1>
-    <h2 style="color:blue;"> This is Second Heading<h2>
+    <h1>This is my first web page!!</h1>
+    <h2> This is Second Heading<h2>
     <h1>Hello! This is my first Git file</h1>
 </body>
 </html>
